# etc

./: C Style Guide.md  README.md  q1-std-atmospheric-cond-calc.py  vimrc
===== Latex Drawing Template Folder =====/: header.sty  main.fdb_latexmk  main.fls  main.tex
===== Latex Template Folder =====/: header.sty  main.run.xml  main.tex  main.toc
Configs/: .huvix_JD.omp.json  Oh-My-Posh_install.md  vimrc
Folder Templates/===== Latex Drawing Template Folder =====/: main.bcf
Folder Templates/===== Latex Template Folder =====/: makefile
Guides/: C Style Guide.md  Oh-My-Posh_install.md  example.h  linux_mint_setup.md
cmake-example/: .gitignore  README.md  run_tests.sh
cmake-example/tests/: CMakeLists.txt  test_example.c
cmake-example/tests/mocks/: example_mock.h
configs/: Arduino Vscode Config.txt  huvix_jack_augmented.omp.json  nvimInstall.md
folder-templates/===== Latex Drawing Template Folder =====/: main.aux  main.blg
folder-templates/===== Latex Template Folder =====/: header.sty  main.tex  makefile
guides/: C Style Guide.md  example.c  git.md
